--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- <div class="test_div"></div> -->
+    <div class="test_div"></div>
     <header class="header">
         <div class="container">
             <nav class="navbar">
@@ -32,19 +32,19 @@
         <div class="tesla_woodmark"></div>
         <div>
             <h1>Model S</h1>
-            <p>Добро пожаловать в будущее!</p>
+            <p class="welcome">Добро пожаловать в будущее!</p>
         </div>
         <div class="model_s"></div>
         <div class="specifications">
             <div class="spec_1">
-                <img class="speed_img" src="/img//Speed.svg" alt="Maximum speed">
+                <img class="speed_img" src="/img/Speed.png" alt="Maximum speed">
                 <div>
                     <p class="main_spec"><span>2,7</span> сек</p>
                     <p class="second_spec">0-100 км/час</p>
                 </div>
             </div>
             <div class="spec_2">
-                <img class="distance_img" src="/img/Road icon.svg" alt="Maximum distance">
+                <img class="distance_img" src="/img/RoadIcon.png" alt="Maximum distance">
                 <div>
                     <p class="main_spec"><span>632</span> км</p>
                     <p class="second_spec">запас хода</p>
@@ -61,6 +61,14 @@
             </div>
         </div>
     </div>
-
+    <div class="description">
+        <div class="direction_down"></div>
+        <div class="description_first">
+            <div class="model_cockpit"></div>
+            <div class="model_description"></div>
+        </div>
+        <div class="description_second">
+        </div>
+    </div>
 </body>
 </html>
