added description section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="test_div"></div>
     <header class="header">
         <div class="container">
             <nav class="navbar">
@@ -64,11 +63,24 @@
     <div class="description">
         <div class="direction_down"></div>
         <div class="description_first">
-            <div class="model_cockpit"></div>
-            <div class="model_description"></div>
+            <div class="model_cockpit">
+            <h2 class="direction_title">Model S</h2>
+            </div>
+            <div class="model_description">
+                <div class="description__title">
+                    <h3>Будущее вождения</h3>
+                    <p>
+                        Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
+                    </p>
+                </div>
+                <div class="description_spec"></div>
+                <div class="description_action"></div>
+            </div>
         </div>
         <div class="description_second">
         </div>
     </div>
+    
+    <!-- <div class="test_div"></div> -->
 </body>
 </html>
