MAIN: updated description section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,37 @@
                         Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
                     </p>
                 </div>
-                <div class="description_spec"></div>
-                <div class="description_action"></div>
+                <div class="description_specs">
+                    <div class="description_spec_1">
+                        <img class="spec_screen" src="/img/screen.svg" alt="Maximum distance">
+                        <div>
+                            <p class="main_spec"><span>17</span> дюймов</p>
+                            <p class="second_spec">Большой дисплей</p></div>
+                        </div>
+                    <div class="description_spec_2">
+                        <img class="spec_wifi" src="/img/wifi.svg" alt="Maximum distance">
+                        <div>
+                            <p class="main_spec">Беспроводное обновление ПО</p>
+                            <p class="second_spec">Повышенная функциональность</p>
+                        </div>
+                    </div>
+                    <div class="description_spec_3">
+                        <img class="spec_bag" src="/img/bag.svg" alt="Maximum distance">
+                        <div>
+                            <p class="main_spec"><span>894</span> литра</p>
+                            <p class="second_spec">Объем грузового пространства</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="description_action">
+                    <button class="more_info">
+                        <p>i</p>
+                        <a href="">УЗНАТЬ БОЛЬШЕ</a>
+                    </button>
+                    <button class="to_order">
+                        <a href="">Заказать</a>
+                    </button>
+                </div>
             </div>
         </div>
         <div class="description_second">
