MAIN: replace img on div with background

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
         <div class="model_s"></div>
         <div class="specifications">
             <div class="spec_1">
-                <img class="speed_img" src="/img/Speed.png" alt="Maximum speed">
-                <div>
+                <div class="spec_1_speed_img"></div>
+                <div class="spec_1_speed">
                     <p class="main_spec"><span>2,7</span> сек</p>
                     <p class="second_spec">0-100 км/час</p>
                 </div>
             </div>
             <div class="spec_2">
-                <img class="distance_img" src="/img/RoadIcon.png" alt="Maximum distance">
-                <div>
+                <div class="spec_2_distance_img"></div>
+                <div class="spec_2_distance">
                     <p class="main_spec"><span>632</span> км</p>
                     <p class="second_spec">запас хода</p>
                 </div>
             </div>
             <div class="action">
                 <button class="test_drive">
-                    <img src="/img/steering-wheel.png" alt="Тест Драйв">
+                    <div class="test_drive_img"></div>
                     <a href="">Тест драйв</a>
                 </button>
                 <button class="to_order">
@@ -75,21 +75,21 @@
                 </div>
                 <div class="description_specs">
                     <div class="description_spec_1">
-                        <img class="spec_screen" src="/img/screen.svg" alt="Maximum distance">
-                        <div>
+                        <div class="spec_screen_img"></div>
+                        <div class="spec_screen">
                             <p class="main_spec"><span>17</span> дюймов</p>
                             <p class="second_spec">Большой дисплей</p></div>
                         </div>
                     <div class="description_spec_2">
-                        <img class="spec_wifi" src="/img/wifi.svg" alt="Maximum distance">
-                        <div>
+                        <div class="spec_wifi_img"></div>
+                        <div class="spec_wifi">
                             <p class="main_spec">Беспроводное обновление ПО</p>
                             <p class="second_spec">Повышенная функциональность</p>
                         </div>
                     </div>
                     <div class="description_spec_3">
-                        <img class="spec_bag" src="/img/bag.svg" alt="Maximum distance">
-                        <div>
+                        <div class="spec_bag_img"></div>
+                        <div class="spec_bag">
                             <p class="main_spec"><span>894</span> литра</p>
                             <p class="second_spec">Объем грузового пространства</p>
                         </div>
@@ -110,6 +110,6 @@
         </div>
     </div>
     
-    <!-- <div class="test_div"></div> -->
+    <div class="test_div"></div>
 </body>
 </html>
