--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <div class="description">
         <div class="direction_down"></div>
         <div class="description_first">
-            <div class="model_cockpit">
-            <h2 class="direction_title">Model S</h2>
+            <div class="description_model_cockpit">
+            <h2 class="description_title">Model S</h2>
             </div>
             <div class="model_description">
-                <div class="description__title">
+                <div class="model_description_title">
                     <h3>Будущее вождения</h3>
                     <p>
                         Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
@@ -107,6 +107,38 @@
             </div>
         </div>
         <div class="description_second">
+            <div class="model_description">
+                <div class="model_description_title">
+                    <h3>Самый безопасный автомобиль в мире</h3>
+                    <p>
+                        Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.
+                    </p>
+                </div>
+                <div class="protection_assessment">
+                    <h3>Оценка защиты: </h3>
+                    <p>Спереди</p>
+                    <p>Сбоку</p>
+                    <p>Сбоку<span> (стойка)</span></p>
+                    <p>Водитель</p>
+                    <p>Пассажир</p>
+                </div>
+                <div class="security">
+                    <div class="security_img"></div>
+                    <div class="security_text">
+                        <p class="security_p_main">5 звезд</p>
+                        <p class="security_p_second">безопасности</p>
+                    </div>
+                </div>
+                <div class="description_action">
+                    <button class="more_info">
+                        <p>i</p>
+                        <a href="">УЗНАТЬ БОЛЬШЕ</a>
+                    </button>
+                    <button class="to_order">
+                        <a href="">Заказать</a>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
     
