MAIN: page on 1440px  ready

--- a/index.html
+++ b/index.html
@@ -139,9 +139,13 @@
                     </button>
                 </div>
             </div>
+            <div class="description_model_security">
+                <div class="model_s_title">Model S</div>
+                <div class="car_frame"></div>
+            </div>
         </div>
     </div>
     
-    <div class="test_div"></div>
+    <!-- <div class="test_div"></div> -->
 </body>
 </html>
