main: update om flex and added @media 1023px-1280px

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Tesla</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
+            <div class="logo"></div>
             <nav class="navbar">
-                <div class="logo"></div>
                 <ul class="menu-main">
                     <li><a href="" class="menu_item active">Model S</a></li>
                     <li><a href="" class="menu_item">Model X</a></li>
@@ -29,7 +30,7 @@
     </header>
     <div class="tesla_titel">
         <div class="tesla_woodmark"></div>
-        <div>
+        <div class="greeting">
             <h1>Model S</h1>
             <p class="welcome">Добро пожаловать в будущее!</p>
         </div>
