main: update om flex and added @media 1024px-1279px

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
         </div>
     </div>
-    
+    <!-- Тестовый образец -->
     <!-- <div class="test_div"></div> -->
 </body>
 </html>
