main: added @media 658px-831px

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <div class="logo"></div>
             <nav class="navbar">
                 <ul class="menu-main">
-                    <li><a href="" class="menu_item active">Model S</a></li>
-                    <li><a href="" class="menu_item">Model X</a></li>
-                    <li><a href="" class="menu_item">Model 3</a></li>
-                    <li><a href="" class="menu_item">Roadster</a></li>
-                    <li><a href="" class="menu_item">Energy</a></li>
+                    <li><a href="#" class="menu_item active">Model S</a></li>
+                    <li><a href="#" class="menu_item">Model X</a></li>
+                    <li><a href="#" class="menu_item">Model 3</a></li>
+                    <li><a href="#" class="menu_item">Roadster</a></li>
+                    <li><a href="#" class="menu_item">Energy</a></li>
                 </ul>
                 <ul class="menu-second">
-                    <li><a href="" class="menu_item">Магазин</a></li>
-                    <li><a href="" class="menu_item">Войти</a></li>
-                    <li><img src="img/menu.png" alt="Menu"></li>
+                    <li><a href="#" class="menu_item">Магазин</a></li>
+                    <li><a href="#" class="menu_item">Войти</a></li>
+                    <li><img class="menu_item_burger" src="img/menu.png" alt="Menu"></li>
                 </ul>
             </nav>
         </div>
